@@ -9,4 +9,4 @@ Description: IDL parsing library
 Version: @VERSION@
 Requires: glib-2.0
 Libs: -L${libdir} -lIDL-2
-Cflags: -I${includedir}
+Cflags: -I${includedir}/libIDL-2.0
