@@ -1,3 +1,12 @@
+2001-09-11  Havoc Pennington  <hp@redhat.com>
+
+	* Makefile.am (libIDLincludedir): move headers to a versioned
+	subdir, and nuke libIDLConf.sh. rename libIDL-config to
+	libIDL-config-2
+
+	* libIDL-2.0.pc.in (Cflags): change -Iincludedir to
+	-Iincludedir/libIDL-2.0
+
 2001-09-19  Mark McLoughlin <mark@skynet.ie>
 
 	Fixes Bugs #60728 and 58458
